--- a/public/assets/css/variable_web_content.css
+++ b/public/assets/css/variable_web_content.css
@@ -201,6 +201,11 @@ img {vertical-align: middle;}
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.4);
 }
 
+.how_we_do div p{
+  text-align: justify;
+  word-wrap: break-word;
+}
+
 .how_we_do{
   display: grid;
   grid-template-columns: 47% 47%;
