--- a/public/assets/css/variable_web_content.css
+++ b/public/assets/css/variable_web_content.css
@@ -526,11 +526,18 @@ table td{
 }
 
 .fa-plus{
-	margin-right:10px;
+	margin-right:8px;
+	font-size:8px;
 }
 
 .fa-minus{
-	margin-left:10px;
+	margin-left:8px;
+	font-size:8px;
+}
+
+.buy_th{
+	width: 60px;
+	
 }
 
 
