--- a/public/assets/css/variable_web_content.css
+++ b/public/assets/css/variable_web_content.css
@@ -356,6 +356,10 @@ hr{
 	color:gray;
 }
 
+.carrito_enpty{
+	cursor:pointer;
+}
+
 .one_product div:nth-child(2) > div:nth-child(1){ 	
 	border: 1px  solid grey;
 }
@@ -418,6 +422,11 @@ hr{
 
 /*-----Login--------*/
 
+.btn_register_in_login{
+	text-decoration: none;
+	color: white;
+}
+
 .login_container{
 	display:grid;
 	grid-template-columns: 70% 30%;
@@ -448,6 +457,7 @@ hr{
 	  height: 35px;
 	  width: 100px;
 	  cursor: pointer;
+	box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.24);
 	
 
 }
@@ -479,10 +489,32 @@ hr{
 	
 }
 
+
+
+
 /*-------------register-----------*/
 
 .justify-content-center{
-	text-align:center;
+	text-align: center;
+	
+}
+
+.btn_register{
+	  margin-top: 20px;
+	margin-bottom: 20px;
+	  background: linear-gradient(151deg, #4CAF52, #7CD482);
+	  color: white;
+	  border: none;
+	  border-radius: 30px;
+	  height: 35px;
+	  width: 100px;
+	  cursor: pointer;
+	box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.24);
+}
+
+.register_input input{
+	width: 30%;
+  	height: 30px;
 }
 
 /*--------END BUY--------*/
@@ -506,7 +538,7 @@ hr{
 
 .end_buy th{
 	
-	background: gray;
+	background: lightgray;
 }
 
 .buy_img img{
@@ -520,6 +552,7 @@ hr{
 
 table td{
 	text-align:center;
+	border-bottom: 1px grey solid;
 }
 
 .total_price{
@@ -541,9 +574,53 @@ table td{
 	
 }
 
+.finish_buy{
+	background-color: lightgray;
+	font-weight: bold;
+	padding: 2px;
+}
 
 
+.hide_price{
+	visibility: hidden;
+}
 
+.btn_end_buy{
+	margin: 15px;	
+	width: 80%;
+	background: linear-gradient(151deg, #4CAF52, #7CD482);
+  	color: white;
+  	border: none;
+  	border-radius: 30px;
+  	height: 30px;
+	cursor: pointer;
+	box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.24);
+}
+
+.btn_delete_cart{
+	margin: 15px;	
+	width: 20%;
+	background: linear-gradient(151deg, #4CAF52, #7CD482);
+  	color: white;
+  	border: none;
+  	border-radius: 30px;
+  	height: 30px;
+	cursor: pointer;
+	box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.24);
+}
+
+.btn_keep_buying{
+	float: right;
+	margin: 15px;	
+	width: 20%;
+	background: linear-gradient(151deg, #4CAF52, #7CD482);
+  	color: white;
+  	border: none;
+  	border-radius: 30px;
+  	height: 30px;
+	cursor: pointer;
+	box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.24);
+}
 
 
 
